# apt2bom

./: .gitignore  README.md  apt2bom.py  config.json  dev_packages.txt  mkdocs.yml  prod_packages.txt  pyproject.toml  requirements.txt
apt2bom/: apt2bom.py  apt_data.py  apt_download.py  apt_parsing.py  conf.py  excel.py  log.py  output.py  resolve_lists.py
config/: config.yaml  config_single.yaml
docs/: 404.html  index.html  search.html  sitemap.xml
docs/example/: index.html
docs/search/: search_index.json
docs_src/: example.md  index.md
examples/data/: sdk_packages.txt
src/apt2bom/: __main__.py  apt2bom.py  apt_data.py  conf.py  dot.py  excel.py  log.py  output.py  resolve_lists.py
