[project]
name = "apt2bom"
version = "0.0.1"
authors = [
  { name="Thomas Irgang", email="thomas.irgang@elektrobit.com" },
]
description = "Generate SBoM from apt metadata."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'openpyxl==3.1.2',
]

[project.urls]
"Homepage" = "https://github.com/thir820/apt2bom"
"Bug Tracker" = "https://github.com/thir820/apt2bom/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
